# moviemash

./: .gitignore  README.md  data.csv  main.py  pyproject.toml  todo
backend/: pyproject.toml  scraper.py
rnd/: rnd.ipynb
