[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["meliodas0n <mrunalnarayana@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pip = "^24.0"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
