[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["meliodas0n <mrunalnarayana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
